<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/inicio" />

    <item
        android:id="@+id/nav_ajuda"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/ajuda" />
    <item
        android:id="@+id/nav_adiciona"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/tomada" />
    <item
        android:id="@+id/nav_config"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/config" />
    <item
        android:id="@+id/nav_compra"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/comprar" />

</menu>