<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_button_ligado"
            android:tint="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lamp" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_button"
            android:tint="@color/cardview_light_background"
            app:layout_constraintEnd_toStartOf="@+id/imageButton6"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_air_conditioner" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ar_condicionado"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton4"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="@+id/imageButton4"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cafeteira"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton5"
            app:layout_constraintStart_toStartOf="@+id/imageButton5"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button"
            android:tint="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_coffee_cup" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lampada"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton6"
            app:layout_constraintStart_toStartOf="@+id/imageButton6"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>